# prompt2bin

./: .gitignore  LICENSE  README.md  codegen.py  codegen_llm.py  codegen_ringbuf_llm.py  intent.py  intent_ringbuf.py  project.py  prompt2bin.py  pyproject.toml  spec.py  test_harness.py  test_ringbuf.py  verify.py  verify_ringbuf.py
.github/workflows/: publish.yml
examples/: audio_ringbuf.h  audio_ringbuf.s  audio_ringbuf.txt  bad_spec_rejected.txt  basic.h  basic.txt  concurrent.h  concurrent.s  concurrent.txt  crypto_secure.h  crypto_secure.s  crypto_secure.txt  game_frame.h  game_frame.s  game_frame.txt  mpmc_log_queue.h  mpmc_log_queue.s  mpmc_log_queue.txt  ringbuf_audio.h  ringbuf_audio.s  ringbuf_audio.txt  ringbuf_mpmc.h  ringbuf_mpmc.s  ringbuf_mpmc.txt
sample_grok_cli/: app.prompt  build.toml
sample_grok_cli/specs/: api_caller.prompt  context_store.prompt  input_handler.prompt  response_buffer.prompt
sample_project/: build.toml
sample_project/specs/: allocator.prompt  event_queue.prompt  memory_pool.prompt  memory_pool_nlah.prompt  message_queue.prompt
skills/prompt2bin-dev/: SKILL.md
src/prompt2bin/: __init__.py  __main__.py  cache.py  cli.py  codegen.py  codegen_llm.py  codegen_proc_llm.py  codegen_ringbuf_llm.py  codegen_strtab_llm.py  codegen_termio_llm.py  intent.py  intent_proc.py  intent_ringbuf.py  intent_strtab.py  intent_termio.py  llm.py  nlah.py  project.py  spec.py  test_harness.py  test_proc.py  test_ringbuf.py  test_strtab.py  test_termio.py  toolchain.py  verify.py  verify_proc.py  verify_ringbuf.py  verify_strtab.py  wasm_exec.py  (+7 more)
