[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt2bin"
version = "0.1.0"
description = "From natural language to verified machine code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["compiler", "ai", "formal-verification", "code-generation", "z3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Compilers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "z3-solver",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.0"]

[project.scripts]
prompt2bin = "prompt2bin.cli:main"
p2b = "prompt2bin.cli:main"

[project.urls]
Homepage = "https://github.com/asianviking/prompt2bin"
Repository = "https://github.com/asianviking/prompt2bin"

[tool.setuptools.packages.find]
where = ["src"]
